<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_background">TiElements Background</string>
    <string name="menu_status_bar">Status Bar</string>
    <string name="menu_lock_screen">Lockscreen</string>
    <string name="menu_gestures">Gestures</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_animations">Animations</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_buttons">Buttons</string>
    <string name="menu_about">About</string>
    <string name="menu_quick_settings">Quick Settings</string>
    <string name="menu_misc">Misc</string>
    <string name="menu_ambient">Ambient</string>
    <string name="menu_battery">Battery</string>
    <string name="menu_screen">Screen</string>
    <string name="build_tweaks_summary_title">Add Elements in your device</string>
    <string name="who_we_are_desc">
        TitaniumOS is a Custom ROM based on Google Android Open Source Project.This ROM developed with a major focus on system stability and useful features. All this without compromising on the pure Android experience.
    </string>
    <string name="maintainers">Maintainers</string>
    <string name="maintainers_title">Official Maintainers</string>
    <string name="maintainers_summary">Officially supported Devices and Maintainers.</string>
    <string name="github">Github</string>
    <string name="github_description">View our source code</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_description">Subscribe to our Telegram channel</string>
    <string name="paypal">Paypal</string>
    <string name="paypal_description">Support us to add more elements</string>
    <string name="maintainer_description">Maintainer: %1$s</string>
    <string name="loading_devices">Loading devices list...</string>
    <string name="loading_devices_failed">Failed to load devices list</string>
    <string name="devices_list_empty">List is empty, tap the icon to reload</string>
    <string name="reload_list">Reload</string>
    <string name="tielements_title">TiElements</string>
    <string name="tielements_summary_title">Add some more elements</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="dlg_ok">OK</string>
    <string name="action_save">Save</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="app_name">TiElements</string>
    <string name="default_string">Default</string>
    <string name="ls_disable_elements">Lockscreen Info Elements</string>
    <string name="lockscreen_battery_info_title">Charging info</string>
    <string name="lockscreen_battery_info_summary">Display charger max current, voltage, wattage and battery temperature while charging</string>
    <string name="statusbar_icons_category">Statusbar Icons</string>
    <string name="bluetooth_battery_title">Bluetooth battery status</string>
    <string name="bluetooth_battery_summary">Display battery level for the connected bluetooth device, if available</string>
    <string name="gestures_title">Gestures</string>
    <string name="double_tap_sleep_gesture_title">Double tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lockscreen to put phone to sleep</string>
    <string name="call_noti_options">Call Notification Options</string>
    <string name="incall_vibrate_connect_title">Vibrate on Connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on Call Waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on Disconnect</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>
    <string name="lockscreen_media_category">Music</string>
    <string name="media_art_title">Media artwork</string>
    <string name="media_art_summary">Show media cover art as the lockscreen background</string>
    <string name="lockscreen_media_blur_title">Media artwork blur level</string>
    <string name="ls_unlocking">Unlocking</string>
    <string name="pocket_judge_title">Pocket detection</string>
    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
    <string name="pocket_judge_fp_title">Allow FP in pocket mode</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="qs_panel_title">QS Panel</string>
    <string name="lockscreen_qs_disabled_title">Disable quick settings when locked</string>
    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings on secure lock screens</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="network_traffic_state_title">Network traffic display</string>
    <string name="network_traffic_location">Traffic indicator placement</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="network_traffic_arrow">Show arrows</string>
    <string name="network_traffic_arrow_summary">Show the network traffic indicator arrows</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="nettraf_font_size">Single net font size</string>
    <string name="statusbar_items_title">Statusbar icons</string>
    <string name="statusbar_items_summary">Toggle the visibility of icons in statusbar</string>
    <string name="clock_style_category_title">Clock Settings</string>
    <string name="clock_style_category_summary">Statusbar Clock Tuner</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged</string>
    <string name="screenshot_type_title">Screenshot type</string>
    <string name="dashboard_conditions_title">Dashboard conditions</string>
    <string name="summary_dashboard_conditions_enabled">Dashboard conditions are enabled</string>
    <string name="summary_dashboard_conditions_disabled">Dashboard conditions are disabled</string>
    <string name="dashboard_suggestions_title">Dashboard suggestions</string>
    <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
    <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="system_title">System</string>
    <string name="activity_open_title">Activity open animation</string>
    <string name="activity_close_title">Activity close animation</string>
    <string name="task_open_title">Task open animation</string>
    <string name="task_open_behind_title">Task open behind animation</string>
    <string name="task_close_title">Task close animation</string>
    <string name="task_move_to_front_title">Move to front animation</string>
    <string name="task_move_to_back_title">Move to back animation</string>
    <string name="wallpaper_open_title">Wallpaper open animation</string>
    <string name="wallpaper_close_title">Wallpaper close animation</string>
    <string name="wallpaper_intra_open_title">Wallpaper intra open animation</string>
    <string name="wallpaper_intra_close_title">Wallpaper intra close animation</string>
    <string name="heads_up_notifications">Heads Up</string>
    <string name="heads_up_notifications_summary">Pop up statusbar notifications</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when QS tiles are pressed</string>
    <string name="aggressive_battery_title">Aggressive Battery</string>
    <string name="aggressive_idle_title">Aggressive Idle</string>
    <string name="aggressive_idle_summary">Enter device idle more frequently and wake up less</string>
    <string name="aggressive_standby_title">Aggressive Standby</string>
    <string name="aggressive_standby_summary">Restrict apps from running in the background</string>
    <string name="aggressive_battery_saver_title">Auto-enable on battery saver</string>
    <string name="aggressive_battery_saver_summary">Enable Aggressive Battery automatically when using battery saver</string>
    <string name="notification_messages">System</string>
    <string name="enable_fc_notifications_title">Force close notifications</string>
    <string name="enable_fc_notifications_summary">Show a dialog when an application crashes</string>
    <string name="brightness_slider">Brightness Slider</string>
    <string name="qs_brightness_slider_title">Brightness slider position</string>
    <string name="brightness_icon_title">Auto brightness icon</string>
    <string name="brightness_icon_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="corners_category_title">Corners</string>
    <string name="corner_radius">Rounded corner radius</string>
    <string name="content_padding">Corner content padding</string>
    <string name="corner_fwvals_title">Use framework values</string>
    <string name="corner_fwvals_summary">Use the default values for your device</string>
    <string name="battery_percentage_title">Battery percentage</string>
    <string name="notification_misc">Misc</string>
    <string name="notification_guts_kill_app_button_title">Kill app button</string>
    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
    <string name="light_settings_header">Notif. Led Settings</string>
    <string name="battery_light_settings">Battery Charging Light</string>
    <string name="battery_light_summary">Customization for Battery Light</string>
    <string name="force_expanded_notifications_title">Force expanded notifications</string>
    <string name="force_expanded_notifications_summary">Force apps that support expanded notifications</string>
    <string name="qs_columns_rows_category_title">QS columns and rows</string>
    <string name="qs_rows_portrait_title">Rows (Portrait)</string>
    <string name="qs_rows_landscape_title">Rows (Landscape)</string>
    <string name="qs_columns_portrait_title">Columns (Portrait)</string>
    <string name="qs_columns_landscape_title">Columns (Landscape)</string>
    <string name="qs_tile_title_visibility_title">Tile title</string>
    <string name="qs_tile_title_visibility_summary">Display title below each tile</string>
    <string name="qs_tile_animation_category">QS tile</string>
    <string name="qs_tile_animation_style_title">QS tile animation</string>
    <string name="qs_tile_animation_duration_title">QS tile animation duration</string>
    <string name="qs_tile_animation_interpolator_title">QS tile animation interpolator</string>
    <string name="doze_brightness_category">Doze Brightness Config</string>
    <string name="ambient_pulse_brightness_title">Ambient notification brightness</string>
    <string name="ambient_pulse_brightness_summary">Set brightness to use when notifcations are shown</string>
    <string name="ambient_doze_brightness_title">Ambient display brightness</string>
    <string name="ambient_doze_brightness_summary">Set brightness to use during ambient display on</string>
</resources>