<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_notifications"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

        <com.titanium.support.preferences.GlobalSettingMasterSwitchPreference
            android:key="heads_up_notifications_enabled"
            android:fragment="com.titanium.tielements.fragments.HeadsUp"
            android:title="@string/heads_up_notifications"
            android:summary="@string/heads_up_notifications_summary"
            android:defaultValue="true" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/light_settings_header" >

        <Preference
            android:key="charging_light"
            android:title="@string/battery_light_settings"
            android:summary="@string/battery_light_summary"
            android:fragment="com.titanium.tielements.fragments.BatteryLightSettings" />

    </PreferenceCategory>

    <PreferenceCategory

        android:key="notification_messages"
        android:title="@string/notification_messages">
        
        <com.titanium.support.preferences.SystemSettingSwitchPreference  
            android:key="enable_fc_notifications" 
            android:title="@string/enable_fc_notifications_title" 
            android:summary="@string/enable_fc_notifications_summary" 
            android:defaultValue="true" /> 

    </PreferenceCategory>

    <PreferenceCategory

        android:key="notification_misc"
        android:title="@string/notification_misc">

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="force_expanded_notifications"
            android:title="@string/force_expanded_notifications_title"
            android:summary="@string/force_expanded_notifications_summary"
            android:defaultValue="false" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="notification_guts_kill_app_button"
            android:title="@string/notification_guts_kill_app_button_title"
            android:summary="@string/notification_guts_kill_app_button_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory

        android:key="call_noti_options"
        android:title="@string/call_noti_options" >

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:defaultValue="false" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:defaultValue="false" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
