<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_status_bar"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <Preference
         android:key="clock_settings"
         android:title="@string/clock_style_category_title"
         android:summary="@string/clock_style_category_summary"
         android:fragment="com.titanium.tielements.fragments.ClockSettings" />

    <PreferenceCategory

        android:key="statusbar_gestures"
        android:title="@string/gestures_title">

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="double_tap_sleep_gesture"
            android:title="@string/double_tap_sleep_gesture_title"
            android:summary="@string/double_tap_sleep_gesture_summary"
            android:defaultValue="false" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory

        android:title="@string/network_traffic_state_title">

        <ListPreference
            android:key="network_traffic_location"
            android:title="@string/network_traffic_location"
            android:summary="%s"
            android:entries="@array/network_traffic_location_entries"
            android:entryValues="@array/network_traffic_location_values"
            android:persistent="false" />

        <ListPreference
            android:key="network_traffic_type"
            android:title="@string/network_traffic_type"
            android:entries="@array/show_network_traffic_type_entries"
            android:entryValues="@array/show_network_traffic_type_values"
            android:defaultValue="0"
            android:persistent="false" />

       <com.titanium.support.preferences.CustomSeekBarPreference
            android:key="network_traffic_autohide_threshold"
            android:title="@string/network_traffic_autohide_threshold_title"
            android:max="10"
            settings:min="0"
            settings:units="" />

       <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="network_traffic_arrow"
            android:title="@string/network_traffic_arrow"
            android:summary="@string/network_traffic_arrow_summary"
            android:defaultValue="true" />

       <com.titanium.support.preferences.CustomSeekBarPreference
            android:key="network_traffic_font_size"
            android:title="@string/nettraf_font_size"
            android:max="60"
            settings:min="21"
            settings:defaultValue="42"
            settings:units="dp" />

    </PreferenceCategory>

    <PreferenceCategory

        android:key="statusbar_icons"
        android:title="@string/statusbar_icons_category">

    <Preference

            android:title="@string/statusbar_items_title"
            android:summary="@string/statusbar_items_summary" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />

    </Preference>

    <com.titanium.support.preferences.SystemSettingSwitchPreference
         android:key="bluetooth_show_battery"
         android:title="@string/bluetooth_battery_title"
         android:summary="@string/bluetooth_battery_summary"
         android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>
