<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_lock_screen"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory

        android:key="ls_gestures"
        android:title="@string/gestures_title">

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="double_tap_sleep_lockscreen"
            android:title="@string/double_tap_sleep_lockscreen_title"
            android:summary="@string/double_tap_sleep_lockscreen_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory

        android:key="lockscreen_media_category"
        android:title="@string/lockscreen_media_category" >

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory

        android:key="ls_unlocking"
        android:title="@string/ls_unlocking">

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="pocket_judge"
            android:title="@string/pocket_judge_title"
            android:summary="@string/pocket_judge_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
