<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_quick_settings"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory

        android:key="qs_panel"
        android:title="@string/qs_panel_title">

    <com.titanium.support.preferences.SecureSettingSwitchPreference
        android:key="status_bar_locked_on_secure_keyguard"
        android:title="@string/lockscreen_qs_disabled_title"
        android:summary="@string/lockscreen_qs_disabled_summary"
        android:defaultValue="false" />

    <com.titanium.support.preferences.SecureSettingSwitchPreference
        android:key="quick_settings_vibrate"
        android:title="@string/quick_settings_vibrate_title"
        android:summary="@string/quick_settings_vibrate_summary"
        android:defaultValue="false"/>

    <ListPreference
        android:key="quick_pulldown"
        android:title="@string/quick_pulldown_title"
        android:entries="@array/quick_pulldown_entries"
        android:entryValues="@array/quick_pulldown_values"
        android:persistent="false" />

    <com.titanium.support.preferences.SystemSettingSwitchPreference
        android:key="qs_tile_title_visibility"
        android:title="@string/qs_tile_title_visibility_title"
        android:summary="@string/qs_tile_title_visibility_summary"
        android:defaultValue="true" />

    <com.titanium.support.preferences.SystemSettingSwitchPreference
        android:key="bluetooth_qs_show_battery"
        android:title="@string/bluetooth_battery_title"
        android:summary="@string/bluetooth_battery_summary"
        android:defaultValue="true" />

    <com.titanium.support.preferences.SystemSettingListPreference
        android:key="qs_battery_mode"
        android:title="@string/battery_percentage_title"
        android:entries="@array/qs_battery_mode_entries"
        android:entryValues="@array/qs_battery_mode_values"
        android:defaultValue="1" />

    </PreferenceCategory>

    <PreferenceCategory

        android:title="@string/qs_tile_animation_category">

        <ListPreference
            android:key="qs_tile_animation_style"
            android:title="@string/qs_tile_animation_style_title"
            android:entries="@array/qs_tile_animation_style_entries"
            android:entryValues="@array/qs_tile_animation_style_values"
            android:defaultValue="0"
            android:persistent="false" />

        <ListPreference
            android:key="qs_tile_animation_duration"
            android:title="@string/qs_tile_animation_duration_title"
            android:entries="@array/qs_tile_animation_duration_entries"
            android:entryValues="@array/qs_tile_animation_duration_values"
            android:defaultValue="2000"
            android:persistent="false" />

        <ListPreference
            android:key="qs_tile_animation_interpolator"
            android:title="@string/qs_tile_animation_interpolator_title"
            android:entries="@array/qs_tile_animation_interpolator_entries"
            android:entryValues="@array/qs_tile_animation_interpolator_values"
            android:defaultValue="0"
            android:persistent="false" />

    </PreferenceCategory>

     <PreferenceCategory

        android:key="brightness_slider"
        android:title="@string/brightness_slider">

        <com.titanium.support.preferences.SecureSettingListPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/qs_brightness_slider_title"
            android:entries="@array/qs_brightness_slider_entries"
            android:entryValues="@array/qs_brightness_slider_values"
            android:defaultValue="1" />

        <com.titanium.support.preferences.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/brightness_icon_title"
            android:summary="@string/brightness_icon_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory

        android:key="qs_columns_rows_category"
        android:title="@string/qs_columns_rows_category_title">

        <com.titanium.support.preferences.SystemSettingSeekBarPreference
            android:key="qs_rows_portrait"
            android:title="@string/qs_rows_portrait_title"
            android:max="5"
            android:min="1"
            android:defaultValue="3"
            settings:units="" />

        <com.titanium.support.preferences.SystemSettingSeekBarPreference
            android:key="qs_rows_landscape"
            android:title="@string/qs_rows_landscape_title"
            android:max="5"
            android:min="1"
            android:defaultValue="1"
            settings:units="" />

        <com.titanium.support.preferences.SystemSettingSeekBarPreference
            android:key="qs_columns_portrait"
            android:title="@string/qs_columns_portrait_title"
            android:max="7"
            android:min="1"
            android:defaultValue="4"
            settings:units="" />

        <com.titanium.support.preferences.SystemSettingSeekBarPreference
            android:key="qs_columns_landscape"
            android:title="@string/qs_columns_landscape_title"
            android:max="9"
            android:min="1"
            android:defaultValue="4"
            settings:units="" />

        </PreferenceCategory>

</PreferenceScreen>
