<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_battery"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

        <com.titanium.support.preferences.GlobalSettingSwitchPreference
            android:key="wake_when_plugged_or_unplugged"
            android:title="@string/wakeup_when_plugged_unplugged_title"
            android:summary="@string/wakeup_when_plugged_unplugged_summary"
            android:defaultValue="true" />

   <PreferenceCategory

        android:key="aggressive_battery"
        android:title="@string/aggressive_battery_title">

        <com.titanium.support.preferences.GlobalSettingSwitchPreference
            android:key="aggressive_idle_enabled"
            android:title="@string/aggressive_idle_title"
            android:summary="@string/aggressive_idle_summary"
            android:defaultValue="false"
            android:dependency="aggressive_battery_saver" />

        <com.titanium.support.preferences.GlobalSettingSwitchPreference
            android:key="aggressive_standby_enabled"
            android:title="@string/aggressive_standby_title"
            android:summary="@string/aggressive_standby_summary"
            android:defaultValue="false"
            android:dependency="aggressive_battery_saver" />

        <com.titanium.support.preferences.GlobalSettingSwitchPreference
            android:key="aggressive_battery_saver"
            android:title="@string/aggressive_battery_saver_title"
            android:summary="@string/aggressive_battery_saver_summary"
            android:defaultValue="true"
            android:disableDependentsState="true" />

    </PreferenceCategory>

</PreferenceScreen>
