<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_ambient"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory

        android:title="@string/doze_brightness_category">

        <com.titanium.support.preferences.CustomSeekBarPreference
            android:key="ambient_doze_brightness"
            android:title="@string/ambient_doze_brightness_title"
            android:summary="@string/ambient_doze_brightness_summary"
            android:max="255"
            settings:min="1"
            android:persistent="false" />

        <com.titanium.support.preferences.CustomSeekBarPreference
            android:key="ambient_pulse_brightness"
            android:title="@string/ambient_pulse_brightness_title"
            android:summary="@string/ambient_pulse_brightness_summary"
            android:max="255"
            settings:min="1"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
