<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2019 TitaniumOS

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_misc"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="enable_conditions"
            android:title="@string/dashboard_conditions_title"
            android:summaryOn="@string/summary_dashboard_conditions_enabled"
            android:summaryOff="@string/summary_dashboard_conditions_disabled"
            android:defaultValue="true" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="enable_suggestions"
            android:title="@string/dashboard_suggestions_title"
            android:summaryOn="@string/summary_dashboard_suggestions_enabled"
            android:summaryOff="@string/summary_dashboard_suggestions_disabled"
            android:defaultValue="true" />

        <com.titanium.support.preferences.SystemSettingListPreference
            android:key="screenshot_type"
            android:entries="@array/screenshot_type_entries"
            android:entryValues="@array/screenshot_type_values"
            android:title="@string/screenshot_type_title"
            android:defaultValue="0" />

</PreferenceScreen>
