<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_screen"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory

        android:key="corners_category"
        android:title="@string/corners_category_title">

        <com.titanium.support.preferences.SecureSettingSwitchPreference
            android:key="sysui_rounded_fwvals"
            android:title="@string/corner_fwvals_title"
            android:summary="@string/corner_fwvals_summary"
            android:defaultValue="true"
            android:disableDependentsState="true" />

        <com.titanium.support.preferences.CustomSeekBarPreference
            android:key="sysui_rounded_size"
            android:title="@string/corner_radius"
            android:max="60"
            settings:min="0"
            settings:units="dp"
            android:persistent="false"
            android:dependency="sysui_rounded_fwvals" />

        <com.titanium.support.preferences.CustomSeekBarPreference
            android:key="sysui_rounded_content_padding"
            android:title="@string/content_padding"
            android:max="30"
            settings:min="0"
            settings:units="dp"
            android:persistent="false"
            android:dependency="sysui_rounded_fwvals" />

    </PreferenceCategory>

</PreferenceScreen>
